# base_rust_api

./: .gitignore  Cargo.toml  Dockerfile  README.md  datadog.yaml
.github/workflows/: ci-cd.yaml  workflow.yml
scripts/: build-in-docker.sh  target.sh
src/: auth.rs  db_connection.rs  errors.rs  handlers.rs  main.rs  models.rs  routes.rs  telemetry.rs
