[package]
name = "base_rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
tokio = { version = "1.44.0", features = ["full"] }
#serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
# tracing
opentelemetry = { version = "0.19.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version="0.12.0",  features = ["tonic", "metrics"] }
opentelemetry-semantic-conventions = { version="0.11.0" }
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17"}